add integration test for SingleStudy analysis